# qr-art-generator

./: .gitignore  pyproject.toml  requirements-all.txt  requirements.txt
qr_art_generator/: __init__.py  __main__.py  api_client.py  cli.py  image_utils.py  local_blend.py  qr_generator.py
